@@ -1,52 +1,4 @@
 ###################################################
-### chunk number 1:
-###################################################
-
-
-
-# 'readData' to reads the data of a specified disease of several years
-#       and generates a state chain using the bulletin knowledge
-#
-# Parameter:
-#       abb : abbreviation of the disease
-#       week53to52: Boolean indicating whether to convert RKI 53 Weeks System to 52 weeks a year
-readData <- function(abb,week53to52=TRUE,sysPath=TRUE){
-  .Deprecated(new = "data", package = "surveillance")
-  #Read depending on which path is requested
-  if (sysPath) {
-    #Prepend the systempath/data to the filename
-    #hoehle 2012-07-24 - this does not work when package is not
-    #installed. Use extdata as recommended in the file package structure.
-    file <- file.path(path.package('surveillance'),'extdata',paste(abb,".txt",sep=""))
-  } else {
-    file <- file.path(paste(abb,".txt",sep=""))
-  }
-
-  # read the data from four years and write it to a table
-  #file <- paste( dataPath, abb , ".txt" , sep="" )
-  fileTable <- read.table( file=file, header=TRUE )
-  observed <- fileTable$observed
-  state <- fileTable$state
-
-  result = list(observed=observed, state=state)
-
-  class(result) = "disProg" # for disease progress
-
-  #Convert to 52 week system...
-  if (week53to52) {
-    result <- correct53to52(result)
-  }
-
-  result$freq <- 52
-  result$start <- c(2001,1)
-
-  return(result)
-}
-
-
-
-
-###################################################
 ### chunk number 3:
 ###################################################
 
